2D cursor moves unintendedly when changing frames in Graph editor #76599

Closed
opened 2020-05-09 21:30:57 +02:00 by Luciano Muñoz Sessarego · 7 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 445.87

Blender Version
Broken: version: 2.83 (sub 15), branch: master, commit date: 2020-05-08 14:49, hash: ce76e17584

Short description of error
When scrubbing frames in the graph editor, the 2D cursor moves to the top of the editor, making it impossible to change the playhead without the cursor's value (i.e. Y-coordinate)

Exact steps for others to reproduce the error

  • Using factory defaults
  • Go to the graph editor
  • Shift+Right Click in the middle of the editor to set the 2D cursor somewhere in the middle.
  • Move the playhead of the timeline to scrub
  • See that the horizontal line is no longer visible; it is moved to underneath the playhead.

Expected behaviour: moving the playhead should only change the current frame, and not the cursor value.

2DCursorGraphEditor.gif

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 445.87 **Blender Version** Broken: version: 2.83 (sub 15), branch: master, commit date: 2020-05-08 14:49, hash: `ce76e17584` **Short description of error** When scrubbing frames in the graph editor, the 2D cursor moves to the top of the editor, making it impossible to change the playhead without the cursor's value (i.e. Y-coordinate) **Exact steps for others to reproduce the error** * Using factory defaults * Go to the graph editor * Shift+Right Click in the middle of the editor to set the 2D cursor somewhere in the middle. * Move the playhead of the timeline to scrub * See that the horizontal line is no longer visible; it is moved to underneath the playhead. Expected behaviour: moving the playhead should only change the current frame, and not the cursor value. ![2DCursorGraphEditor.gif](https://archive.blender.org/developer/F8523700/2DCursorGraphEditor.gif)
Author
Member

Added subscriber: @LucianoMunoz

Added subscriber: @LucianoMunoz
Sybren A. Stüvel was assigned by Luciano Muñoz Sessarego 2020-05-09 21:31:14 +02:00
Sybren A. Stüvel removed their assignment 2020-05-11 10:49:28 +02:00

Added subscriber: @dr.sybren

Added subscriber: @dr.sybren

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Julian Eisel was assigned by Sybren A. Stüvel 2020-05-11 13:51:57 +02:00
Member

This can be easily fixed by letting the frame change operator run in the scrubbing region, as opposed to the graph-cursor one. That's easy to do:

diff --git a/release/scripts/presets/keyconfig/keymap_data/blender_default.py b/release/scripts/presets/keyconfig/keymap_data/blender_default.py
index 2e83f3c86c6..6e6f11eebfc 100644
--- a/release/scripts/presets/keyconfig/keymap_data/blender_default.py
+++ b/release/scripts/presets/keyconfig/keymap_data/blender_default.py
@@ -1391,7 +1391,6 @@ def km_time_scrub(_params):
 
     items.extend([
         ("anim.change_frame", {"type": "LEFTMOUSE", "value": 'PRESS'}, None),
-        ("graph.cursor_set", {"type": "LEFTMOUSE", "value": 'PRESS'}, None),
     ])
 
     return keymap
diff --git a/source/blender/editors/animation/anim_ops.c b/source/blender/editors/animation/anim_ops.c
index 2db381dfc69..40cd368e02b 100644
--- a/source/blender/editors/animation/anim_ops.c
+++ b/source/blender/editors/animation/anim_ops.c
@@ -73,15 +73,9 @@ static bool change_frame_poll(bContext *C)
    * this shouldn't show up in 3D editor (or others without 2D timeline view) via search
    */
   if (area) {
-    if (ELEM(area->spacetype, SPACE_ACTION, SPACE_NLA, SPACE_SEQ, SPACE_CLIP)) {
+    if (ELEM(area->spacetype, SPACE_ACTION, SPACE_NLA, SPACE_SEQ, SPACE_CLIP, SPACE_GRAPH)) {
       return true;
     }
-    else if (area->spacetype == SPACE_GRAPH) {
-      /* NOTE: Graph Editor has special version which does some extra stuff.
-       * No need to show the generic error message for that case though!
-       */
-      return false;
-    }
   }
 
   CTX_wm_operator_poll_msg_set(C, "Expected an animation area to be active");

Which gives this behavior:
graph_editor_cursor_vs_scrub.mp4

Sybren seems to be fine with this, @LucianoMunoz if you agree too, I'm going to commit.

This can be easily fixed by letting the frame change operator run in the scrubbing region, as opposed to the graph-cursor one. That's easy to do: ```lines=10 diff --git a/release/scripts/presets/keyconfig/keymap_data/blender_default.py b/release/scripts/presets/keyconfig/keymap_data/blender_default.py index 2e83f3c86c6..6e6f11eebfc 100644 --- a/release/scripts/presets/keyconfig/keymap_data/blender_default.py +++ b/release/scripts/presets/keyconfig/keymap_data/blender_default.py @@ -1391,7 +1391,6 @@ def km_time_scrub(_params): items.extend([ ("anim.change_frame", {"type": "LEFTMOUSE", "value": 'PRESS'}, None), - ("graph.cursor_set", {"type": "LEFTMOUSE", "value": 'PRESS'}, None), ]) return keymap diff --git a/source/blender/editors/animation/anim_ops.c b/source/blender/editors/animation/anim_ops.c index 2db381dfc69..40cd368e02b 100644 --- a/source/blender/editors/animation/anim_ops.c +++ b/source/blender/editors/animation/anim_ops.c @@ -73,15 +73,9 @@ static bool change_frame_poll(bContext *C) * this shouldn't show up in 3D editor (or others without 2D timeline view) via search */ if (area) { - if (ELEM(area->spacetype, SPACE_ACTION, SPACE_NLA, SPACE_SEQ, SPACE_CLIP)) { + if (ELEM(area->spacetype, SPACE_ACTION, SPACE_NLA, SPACE_SEQ, SPACE_CLIP, SPACE_GRAPH)) { return true; } - else if (area->spacetype == SPACE_GRAPH) { - /* NOTE: Graph Editor has special version which does some extra stuff. - * No need to show the generic error message for that case though! - */ - return false; - } } CTX_wm_operator_poll_msg_set(C, "Expected an animation area to be active"); ``` Which gives this behavior: [graph_editor_cursor_vs_scrub.mp4](https://archive.blender.org/developer/F8528083/graph_editor_cursor_vs_scrub.mp4) Sybren seems to be fine with this, @LucianoMunoz if you agree too, I'm going to commit.
Author
Member

Yes please, looks exactly like what i was expecting ! :)
Gorgeous work guys!

Yes please, looks exactly like what i was expecting ! :) Gorgeous work guys!

This issue was referenced by fc59febb1b

This issue was referenced by fc59febb1b30f390e733e1c775b93d128dd84e34
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#76599
No description provided.